@@ -1,10 +1,10 @@
 Initiating transitions on various properties of all boxes.
 
-Expected Property: Target: box1 Type: webkitTransitionEnd Elapsed Time: 0.5 -- PASS
-Expected Property: Target: box2 Type: webkitTransitionEnd Elapsed Time: 0.5 -- PASS
-Expected Property: Target: box2 Type: webkitTransitionEnd Elapsed Time: 0.5 -- PASS
-Expected Property: Target: box3 Type: webkitTransitionEnd Elapsed Time: 0.7 -- PASS
-Expected Property: Target: box3 Type: webkitTransitionEnd Elapsed Time: 0.7 -- PASS
-Expected Property: Target: box3 Type: webkitTransitionEnd Elapsed Time: 0.7 -- PASS
-Expected Property: Target: box3 Type: webkitTransitionEnd Elapsed Time: 0.7 -- PASS
+Expected Property: background-color Target: box2 Type: webkitTransitionEnd Elapsed Time: 0.5 -- PASS
+Expected Property: background-color Target: box3 Type: webkitTransitionEnd Elapsed Time: 0.7 -- PASS
+Expected Property: height Target: box3 Type: webkitTransitionEnd Elapsed Time: 0.7 -- PASS
+Expected Property: left Target: box1 Type: webkitTransitionEnd Elapsed Time: 0.5 -- PASS
+Expected Property: left Target: box2 Type: webkitTransitionEnd Elapsed Time: 0.5 -- PASS
+Expected Property: left Target: box3 Type: webkitTransitionEnd Elapsed Time: 0.7 -- PASS
+Expected Property: width Target: box3 Type: webkitTransitionEnd Elapsed Time: 0.7 -- PASS
 
