@@ -1,3 +1,14 @@
+2008-09-22  Chris Marrin  <cmarrin@apple.com>
+
+        Reviewed by Sam Weinig
+
+        transition end event when -webkit-transition-property: all puts wrong
+        propertyName in event
+        https://bugs.webkit.org/show_bug.cgi?id=20903
+        
+        * page/animation/ImplicitAnimation.cpp:
+        (WebCore::ImplicitAnimation::sendTransitionEvent):
+
 2008-09-22  Chris Fleizach  <cfleizach@apple.com>
 
         Reviewed by Darin Adler.
